tests/ui/method_unsafe.stderr
error: Resource methods must not be unsafe
 --> $DIR/method_unsafe.rs:8:1
  |
8 | unsafe fn read_all()
  | ^^^^^^
